--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,6 +12,7 @@
     "flowbite-react": "^0.10.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-countdown": "^2.3.6",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0"
   },
